# tinyengine-backend

./: .env.example  .gitignore  Cargo.toml  README.md  config.yaml
documents/agent/: HarmonyBlock.md  HarmonyButton.md  HarmonyCheckbox.md  HarmonyEditor.md  HarmonyForm.md  HarmonyImage.md  HarmonyInput.md  HarmonyLabel.md  HarmonyNavigator.md  HarmonyPicker.md  HarmonyProgress.md  HarmonyRadio.md  HarmonyScrollView.md  HarmonySlider.md  HarmonySwiper.md  HarmonySwitch.md  HarmonyTabBar.md  HarmonyText.md  HarmonyTextarea.md  HarmonyVideo.md  HarmonyView.md
documents/tinyengine/: CanvasFlexBox.md  breadcrumb.md  button.md  carousel.md  checkbox.md  h1.md  icon.md  input.md  radio.md  seacrh.md  select.md  switch.md  tabs.md
embedding/: Cargo.toml  README.md
embedding/examples/: embedding_example.rs  search_example.rs
embedding/src/: lib.rs
embedding/src/chunker/: mod.rs  text_chunker.rs
embedding/src/config/: mod.rs
embedding/src/error/: mod.rs
embedding/src/model/: embedding.rs  mod.rs  onnx_model.rs  tokenizer.rs
embedding/src/parser/: mod.rs  pdf.rs  text.rs  trait_.rs
embedding/src/service/: mod.rs
embedding/src/vector_store/: mod.rs  qdrant.rs  trait_.rs
scripts/: 01_create_all_tables_ddl_v1.0.0.mysql.sql  02_create_model_ddl_2025_0717.sql  03_create_resources_ddl_2025_0902.sql  04_create_permission_table_ddl_2025_1029.sql  05_update_all_tables_ddl.sql  06_update_tables_ddl_v1.0.0_2025_0527.sql  07_update_table_ddl_2025_1014.sql  08_update_table_ddl_2025_1217.sql  09_update_table_ddl_2025_1229.sql  init.sql  init_data_2025_1023.sql  init_data_2025_1125.sql  init_data_for_test_v1.0.0.sql
src/: main.rs
src/api/handlers/: app_handler.rs  block_handler.rs  extension_handler.rs  mod.rs  page_handler.rs  platform_handler.rs  schema2code_handler.rs
src/api/models/: app.rs  block.rs  mod.rs  page.rs
src/api/routes/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/migrations/: 20240101000000_init.sql
src/error/: mod.rs
