[package]
name = "tiny-engine-embedding"
version = "0.1.0"
edition = "2021"
authors = ["TinyEngine Team"]
description = "all-MiniLM-L6-v2 embedding module for TinyEngine"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokenizers = "0.19"

# Pure Rust ONNX inference
tract-onnx = "0.21"
tract-core = "0.21"
ndarray = "0.16"

reqwest = { version = "0.12", features = ["json"] }

lopdf = "0.31"
encoding_rs = "0.8"

thiserror = "1"
anyhow = "1"

tracing = "0.1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

walkdir = "2"
glob = "0.3"

async-trait = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[[example]]
name = "embedding_example"
path = "examples/embedding_example.rs"

[[example]]
name = "search_example"
path = "examples/search_example.rs"
